<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_bg"
    tools:context=".user_module.activities.ChangePasswordActivity">
    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="1dp"
            android:padding="@dimen/back_btn_padding"
            android:src="@mipmap/back_icon"
            android:background="@color/back_btn"
            />
        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        >
   <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/line"
    />
        <EditText
            android:id="@+id/old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_bg"
            android:hint="@string/old_password"
            android:maxLength="12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_bg"
            android:hint="@string/new_password"
            android:maxLength="12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <EditText
            android:id="@+id/re_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_bg"
            android:hint="@string/reenter_password"
            android:maxLength="12"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:inputType="textPassword"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            />
        <Button
            android:id="@+id/change_pass_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:text="@string/change_password"
            android:background="@color/colorOrangebutton"
            android:textColor="@android:color/white"
            />

    </LinearLayout>


</RelativeLayout>