<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="1dp"
            android:padding="@dimen/back_btn_padding"
            android:src="@mipmap/back_icon"
            android:background="@color/back_btn"
            android:visibility="visible"
            />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back_btn"
            android:layout_marginLeft="10dp"
            android:text="Add your response"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/title_layout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Details :"
                android:textSize="20dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/colorOrangebutton"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="Name :"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"

                    />
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="Ramu"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="Mobile :"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="9951040410"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="Email :"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"

                    />
                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="ramu.kithada@gmail.com"
                    android:textSize="16dp"
                    android:textColor="@android:color/black"

                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />


            <CheckBox
                android:id="@+id/delivery_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delivery Option"
                android:textSize="16dp"
                android:layout_margin="5dp"
                />
            <RadioGroup
                android:id="@+id/product_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/same_ch"
                >
                <RadioButton
                    android:id="@+id/same_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/same_product"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    />
                <RadioButton
                    android:id="@+id/similar_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/similar_product"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    />
            </RadioGroup>
            <LinearLayout
                android:id="@+id/image_upload_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                >
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/logo_icon"
                    android:onClick="openGallery"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    android:padding="15dp"
                    android:textColor="@color/colorOrangebutton"
                    android:textSize="16dp"
                    />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
            <EditText
                android:id="@+id/product_name_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Product Name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorOrangebutton"
                android:textColor="@android:color/black"
                android:background="@color/trns"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
            <EditText
                android:id="@+id/product_price_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Product Price"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="@color/colorOrangebutton"
                android:textColor="@android:color/black"
                android:background="@color/trns"
                android:inputType="number"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
            <EditText
                android:id="@+id/product_offered_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="Product Offer Price"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorOrangebutton"
                android:background="@color/trns"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:background="@color/colorOrangebutton"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_margin="10dp"
                android:onClick="submitReplay"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>